refactor: 주최자의 카페 대관, 휴무일 날짜 조회 V1 dto 로직 수정